Attempt 5 is here and real

--- a/visualizations/rap_network/attempt_5/index.html
+++ b/visualizations/rap_network/attempt_5/index.html
@@ -3,32 +3,51 @@
 <link href="/css/style.css" rel="stylesheet">
 <style>
 
+html, body {
+    height : 100%;
+}
+
 #main-content {
     position : relative;
     width : 100%;
     box-sizing : border-box;
 }
 
+#top {
+    border-bottom : solid;
+}
+
+.open-hand-cursor {
+    cursor : url(http://maps.gstatic.com/mapfiles/openhand_8_8.cur), default;
+}
+
+.closed-hand-cursor {
+    cursor : url(http://maps.gstatic.com/mapfiles/closedhand_8_8.cur), default;
+}
+
+.pointer-cursor {
+    cursor : pointer;
+}
+
 #artist-picture {
     width : 100%;
+    -webkit-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+    margin-bottom : 1em;
 }
 
 #sidebar {
     width : 25%;
+    height : 610px;
     float : left;
     box-sizing : border-box;
     padding-right : 10px;
+    border-right : solid;
 }
 
-p {
+h6 {
     margin-bottom : 1rem;
-}
-
-svg {
-    width : 75%;
-    float : left;
-    border-left : solid thin;
-    box-sizing : border-box;
 }
 
 .node {
@@ -41,57 +60,76 @@ svg {
     stroke: #bbb;
 }
 
-#threshold-slider {
-    width : 25%;
+#threshold-label-wrapper {
+    padding: 0.7em 0;
 }
 
-#artist_name {
-    background : none;
-    border : none;
-    font-size : 42px;
+#autocomplete {
+    max-width : 50%;
+    padding-left : 0px;
     height : 100%;
-    padding : 0;
-    color : black;
+    display : inline;
+    font-size : 4.2rem;
+    border : none;
+    background : none;
 }
 
-#artist_name_suggestion {
-    display : inline;
-    position : absolute;
-    top : 1%;
-    left : 18%;
+.ui-autocomplete {
+    max-width : 25%;
+    list-style : none;
+    background : lightgrey;
+    border-radius : 0 0 10px 10px;
+}
+
+.ui-menu-item {
+    font-weight : 200;
+    font-size : 2em;
+    margin-bottom : 0;
+    padding-left : 0.4em;
+}
+
+.ui-state-focus {
+    background : grey;
+}
+
+.ui-helper-hidden-accessible {
+    display : none;
 }
 
 </style>
 <body>
-    <div id="top">
-        <div class="banner">
+    <div id="top" class="row">
+        <div class="banner eight columns">
             <h2>The Oracle of 
-                <p id="artist_name_suggestion">Yeezy</p>
-                <input type='text' id="artist_name" value = ''></input>
+                <input type="text" name="centre_node" placeholder="Yeezy" id="autocomplete"/>
             </h2>
-            <p>Made by <a href="/#about"> Arkady Arkhangorodsky </a></p>
+            <h6>Made by <a href="/#about"> Arkady Arkhangorodsky </a></h6>
         </div>
-        <p> Collaboration threshold: <span id="threshold-label"></span> </p>
-        <div id="threshold-slider"></div>
+        <div class="slider-wrapper four columns">
+            <h5 id="threshold-label-wrapper"> Collaboration threshold: <span id="threshold-label"></span> </h5>
+            <div id="threshold-slider"></div>
+        </div>
     </div>
-    <div id="main-content">
-        <div id="sidebar">
-            <h3 id="artist-name"> Hover over an artist! </h3>
+    <div id="main-content" class="row">
+        <div id="sidebar" class="three columns">
+            <h4 id="artist-name"> Hover over an artist! </h4>
             <img src="http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg" alt="" id="artist-picture"/>
-            <p>Yeezy Number: <span id="yeezy-number"></span></p>
+            <p><span id="artist-label">Yeezy</span> Number: <span id="yeezy-number"></span></p>
             <div id="path-to-yeezy">
             </div>
         </div>
+        <div id="svg-wrapper"></div>
     </div>
 
     <link rel="stylesheet" href="/visualizations/rap_network/d3.slider.css" />
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="/visualizations/rap_network/d3.slider.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
     <script>
 
 var width = 960,
-    height = 950;
+    height = 610;
 
 var artistName = $("#artist-name")
 var artistNameSuggestion = $("#artist_name_suggestion")
@@ -102,55 +140,76 @@ var yeezyPath = $("#path-to-yeezy")
 var artist_names = ["Kanye West", "Jay Z", "Kendrick Lamar", "Diddy", "Drake", "Lil Wayne", "Big Sean", "Jeezy", "Pusha T", "J. Cole", "Common", "2 Chainz", "Nicki Minaj", "Tyler, The Creator", "Ludacris", "Talib Kweli", "Cam'ron", "Nas", "KRS-ONE", "RZA", "T.I.", "Rick Ross", "Lupe Fiasco", "Yasiin Bey", "Eminem", "Raekwon", "Scarface", "Busta Rhymes", "Chief Keef", "E-40", "Jadakiss", "Future", "Ol' Dirty Bastard", "Frank Ocean", "Ghostface Killah", "Twista", "Pete Rock", "Wale", "Ty Dolla $ign", "Dr. Dre", "The Notorious B.I.G.", "Ja Rule", "Outkast", "Killer Mike", "DMX", "50 Cent", "Meek Mill", "Lil Kim", "Kurupt", "YG", "Nipsey Hu$$le", "Birdman", "ScHoolboy Q", "Wiz Khalifa", "2Pac", "Young Thug", "Juicy J", "Master P", "Boosie Badazz", "Rich Homie Quan", "A$AP Rocky", "Royce Da 5'9\"", "Yelawolf", "Big KRIT", "Danny Brown", "Action Bronson", "Joey BADA$$", "Ab-Soul", "Ace Hood", "Jay Rock", "Tech N9ne", "B.o.B", "Mac Miller", "Snoop Dogg", "Childish Gambino", "Curren$y", "Murs", "The Roots", "Gucci Mane", "Logic", "Fat Joe", "LL Cool J", "Nelly", "Bone Thugs-n-Harmony", "Waka Flocka Flame", "Trey Songz", "Mystikal", "Bun B", "Soulja Boy", "Krizz Kaliko", "Lil B", "Wyclef Jean", "Chance The Rapper", "Kevin Gates", "Hodgy Beats", "Prodigy (Mobb Deep)", "Asher Roth", "Ice Cube", "Nate Dogg", "El-P", "AZ", "Mobb Deep", "Havoc", "De La Soul", "Beastie Boys", "Xzibit", "Kool G. Rap", "Inspectah Deck", "MC Guru", "Freddie Gibbs", "Killah Priest", "Wu-Tang Clan", "Method Man", "MF DOOM", "Cappadonna", "Madlib", "RiFF RAFF", "Masta Ace", "Krayzie Bone", "Brother Ali", "Redman", "Outlawz", "Ice-T", "Three 6 Mafia", "Ras Kass", "Aesop Rock", "Cunninlynguists", "Prince Paul", "Erick Sermon", "E.P.M.D.", "Atmosphere", "Rakim", "A Tribe Called Quest", "Run-D.M.C.", "Eyedea", "Cannibal Ox", "UGK", "Pimp C", "GZA", "Kool Keith", "Das EFX", "Gang Starr", "Goodie Mob", "Cypress Hill", "Clipse", "Biz Markie", "Jungle Brothers", "Jay Electronica", "Del the Funky Homosapien", "Jeru the Damaja", 'Devin the Dude', "Canibus", "Earl Sweatshirt", "U-God", "Masta Killa", "Eazy-E", "Big L", "Lauryn Hill", "Big Punisher", "Slick Rick", "Public Enemy", "Chuck D", "Big Boi", "Andre 3000", "Black Thought", "The Underachievers", "Flatbush Zombies", "Capital STEEZ", "CJ Fly", "Casey Veggies", "Big Daddy Kane", "Immortal Technique", "Pharoahe Monch", "MC Lyte", "Kool Moe Dee", "Queen Latifah", "Beanie Sigel", "Domo Genesis", "Game"];
 
 $(document).ready(function ()
-    {  
-        $("#artist_name").focus()
-    });
+        {  
+            $("#autocomplete").focus()
+        });
 
 var color = d3.scale.category20();
 
-var force = d3.layout.force()
-    .size([width, height]);
+// rescale g
+function rescale() {
+    trans=d3.event.translate;
+    scale=d3.event.scale;
 
-    var svg = d3.select("#main-content").append("svg")
+    vis.attr("transform",
+            "translate(" + trans + ")"
+            + " scale(" + scale + ")");
+}
+
+function mousedown() {
+    vis.call(d3.behavior.zoom().on("zoom"), rescale);
+    return;
+}
+
+var force = d3.layout.force().size([width, height]);
+
+var svg = d3.select("#svg-wrapper").append("svg")
     .attr("width", width)
-    .attr("height", height);
+    .attr("height", height)
+    .attr("class", "open-hand-cursor");
 
-    d3.json("yeezified_network.json", function(error, graph) {
-        
-        thresholdValue = 25;
-        artist_name = "Kanye West";
+svg.on("mousedown.drag", function() {
+    svg.attr("class", "closed-hand-cursor");
+}).on("mouseup.drag", function() {
+    svg.attr("class", "open-hand-cursor");
+})
 
-        $("#artist_name").bind('input', function(evt) {
-            if ($("#artist_name").val().length > artist_name.length) {
-                artist_name = $("#artist_name").val();
-                console.log(artist_name)
-                var filtered = artist_names.filter(function(s) {
-                    return s.toLowerCase().startsWith(artist_name.toLowerCase());
-                });
-                if (filtered.length == 1) {
-                    artist_name = filtered[0];
-                    console.log(artist_name)
-                    artistNameSuggestion.html(artist_name);
-                    makeGraph(graph, thresholdValue, artist_name);
-                }
-            }
-            artist_name = $("#artist_name").val();
-        });
+var vis = svg.append('svg:g')
 
-        d3.select('#threshold-slider').call(d3.slider()
-                .value(thresholdValue)
-                .on("slide", function(evt, value) {
-                    thresholdValue = value;
-                    makeGraph(graph, value, artist_name);
-                }))
-        makeGraph(graph, thresholdValue, artist_name);
-    })
+svg.call(d3.behavior.zoom().on("zoom", rescale))
+    .on("dblclick.zoom", null)
+
+d3.json("yeezified_network.json", function(error, graph) {
+
+    thresholdValue = 25;
+    artist_name = "Kanye West";
+
+    $('#autocomplete').autocomplete({
+        source: function(request, response) {
+            var results = $.ui.autocomplete.filter(artist_names, request.term);
+            response(results.slice(0, 4));
+        },
+        select : function(event, ui) {
+            artist_name = ui.item.value;
+            makeGraph(graph, thresholdValue, artist_name);
+        }
+    });
+
+    d3.select('#threshold-slider').call(d3.slider()
+            .value(thresholdValue)
+            .on("slide", function(evt, value) {
+                thresholdValue = value;
+                makeGraph(graph, value, artist_name);
+            }))
+    makeGraph(graph, thresholdValue, artist_name);
+})
 
 function makeGraph(graph, value, artist_name) {
-    svg.selectAll('*').remove();
+    vis.selectAll('*').remove();
     var nodes = graph.nodes.slice(),
     links = [],
-        bilinks = [];
+    bilinks = [];
+    d3.select("#artist-label").html(artist_name);
     d3.select("#threshold-label").html(Math.ceil(Math.pow(value/10, 2)));
     var slider_threshold = Math.pow(value/10, 2);
     graph.links.forEach(function(link) {
@@ -173,7 +232,7 @@ function makeGraph(graph, value, artist_name) {
         .links(links)
         .start();
 
-    var link = svg.selectAll(".link")
+    var link = vis.selectAll(".link")
         .data(bilinks)
         .enter().append("path")
         .attr("class", "link")
@@ -181,7 +240,7 @@ function makeGraph(graph, value, artist_name) {
             return Math.sqrt(d[3])/5
         })
 
-    var node = svg.selectAll(".node")
+    var node = vis.selectAll(".node")
         .data(graph.nodes)
         .enter().append("circle")
         .attr("class", "node")
@@ -199,13 +258,13 @@ function makeGraph(graph, value, artist_name) {
         .text(function(d) { return d.name; });
 
     node.on("mouseover", function(d) {
+        svg.attr("class", "pointer-cursor")
         d3.select(this).attr("r", 6)
             artistName.html(d.name)
             artistPicture.attr("src", d.image)
 
             if (d.name == artist_name) {
-                console.log("FOUND HIM HERE TOO")
-                    var sentence = "<p>"
+                var sentence = "<p>"
                     sentence += d.name
                     sentence += " doesn't need a "
                     sentence += d.name
@@ -213,8 +272,8 @@ function makeGraph(graph, value, artist_name) {
                     sentence += "</p>"
                     yeezyPath.append($(sentence));
             } else {
-                yeezyNumber.html(d.yeezy_number)
-                    $.each(d.yeezy_path, function(key, value) {
+                yeezyNumber.html(d.yeezy_number[artist_name])
+                    $.each(d.yeezy_path[artist_name], function(key, value) {
                         var sentence = "<p>"
                             sentence += value.from
                             sentence += " and "
@@ -226,6 +285,7 @@ function makeGraph(graph, value, artist_name) {
                     })
             }
     }).on("mouseout", function(d) {
+        svg.attr("class", "open-hand-cursor")
         d3.select(this).attr("r", 4)
             artistName.html("Hover over an artist!")
             artistPicture.attr("src", "http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg")
