Added imaginary edges when threshold is too high

--- a/visualizations/rap_network/attempt_5/index.html
+++ b/visualizations/rap_network/attempt_5/index.html
@@ -31,9 +31,9 @@ html, body {
 
 #artist-picture {
     width : 100%;
-    -webkit-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
     margin-bottom : 1em;
 }
 
@@ -58,6 +58,11 @@ h6 {
 .link {
     fill: none;
     stroke: #bbb;
+}
+
+.dashed-link {
+    fill: none;
+    stroke: #f00;
 }
 
 .path-to-centre {
@@ -147,7 +152,7 @@ var artistPicture = $("#artist-picture")
 var yeezyNumber = $("#yeezy-number")
 var yeezyPath = $("#path-to-yeezy")
 
-var artist_names = ["Kanye West", "Jay Z", "Kendrick Lamar", "Diddy", "Drake", "Lil Wayne", "Big Sean", "Jeezy", "Pusha T", "J. Cole", "Common", "2 Chainz", "Nicki Minaj", "Tyler, The Creator", "Ludacris", "Talib Kweli", "Cam'ron", "Nas", "KRS-ONE", "RZA", "T.I.", "Rick Ross", "Lupe Fiasco", "Yasiin Bey", "Eminem", "Raekwon", "Scarface", "Busta Rhymes", "Chief Keef", "E-40", "Jadakiss", "Future", "Ol' Dirty Bastard", "Frank Ocean", "Ghostface Killah", "Twista", "Pete Rock", "Wale", "Ty Dolla $ign", "Dr. Dre", "The Notorious B.I.G.", "Ja Rule", "Outkast", "Killer Mike", "DMX", "50 Cent", "Meek Mill", "Lil Kim", "Kurupt", "YG", "Nipsey Hu$$le", "Birdman", "ScHoolboy Q", "Wiz Khalifa", "2Pac", "Young Thug", "Juicy J", "Master P", "Boosie Badazz", "Rich Homie Quan", "A$AP Rocky", "Royce Da 5'9\"", "Yelawolf", "Big KRIT", "Danny Brown", "Action Bronson", "Joey BADA$$", "Ab-Soul", "Ace Hood", "Jay Rock", "Tech N9ne", "B.o.B", "Mac Miller", "Snoop Dogg", "Childish Gambino", "Curren$y", "Murs", "The Roots", "Gucci Mane", "Logic", "Fat Joe", "LL Cool J", "Nelly", "Bone Thugs-n-Harmony", "Waka Flocka Flame", "Trey Songz", "Mystikal", "Bun B", "Soulja Boy", "Krizz Kaliko", "Lil B", "Wyclef Jean", "Chance The Rapper", "Kevin Gates", "Hodgy Beats", "Prodigy (Mobb Deep)", "Asher Roth", "Ice Cube", "Nate Dogg", "El-P", "AZ", "Mobb Deep", "Havoc", "De La Soul", "Beastie Boys", "Xzibit", "Kool G. Rap", "Inspectah Deck", "MC Guru", "Freddie Gibbs", "Killah Priest", "Wu-Tang Clan", "Method Man", "MF DOOM", "Cappadonna", "Madlib", "RiFF RAFF", "Masta Ace", "Krayzie Bone", "Brother Ali", "Redman", "Outlawz", "Ice-T", "Three 6 Mafia", "Ras Kass", "Aesop Rock", "Cunninlynguists", "Prince Paul", "Erick Sermon", "E.P.M.D.", "Atmosphere", "Rakim", "A Tribe Called Quest", "Run-D.M.C.", "Eyedea", "Cannibal Ox", "UGK", "Pimp C", "GZA", "Kool Keith", "Das EFX", "Gang Starr", "Goodie Mob", "Cypress Hill", "Clipse", "Biz Markie", "Jungle Brothers", "Jay Electronica", "Del the Funky Homosapien", "Jeru the Damaja", 'Devin the Dude', "Canibus", "Earl Sweatshirt", "U-God", "Masta Killa", "Eazy-E", "Big L", "Lauryn Hill", "Big Punisher", "Slick Rick", "Public Enemy", "Chuck D", "Big Boi", "Andre 3000", "Black Thought", "The Underachievers", "Flatbush Zombies", "Capital STEEZ", "CJ Fly", "Casey Veggies", "Big Daddy Kane", "Immortal Technique", "Pharoahe Monch", "MC Lyte", "Kool Moe Dee", "Queen Latifah", "Beanie Sigel", "Domo Genesis", "Game"];
+var artist_names = ["Kanye West", "Jay Z", "Kendrick Lamar", "Diddy", "Drake", "Lil Wayne", "Big Sean", "Jeezy", "Pusha T", "J. Cole", "Common", "2 Chainz", "Nicki Minaj", "Tyler, The Creator", "Ludacris", "Talib Kweli", "Cam'ron", "Nas", "KRS-ONE", "RZA", "T.I.", "Rick Ross", "Lupe Fiasco", "Yasiin Bey", "Eminem", "Raekwon", "Scarface", "Busta Rhymes", "Chief Keef", "E-40", "Jadakiss", "Future", "Ol' Dirty Bastard", "Frank Ocean", "Ghostface Killah", "Twista", "Pete Rock", "Wale", "Ty Dolla $ign", "Dr. Dre", "The Notorious B.I.G.", "Ja Rule", "Outkast", "Killer Mike", "DMX", "50 Cent", "Meek Mill", "Lil Kim", "Kurupt", "YG", "Nipsey Hu$$le", "Birdman", "ScHoolboy Q", "Wiz Khalifa", "2Pac", "Young Thug", "Juicy J", "Master P", "Boosie Badazz", "Rich Homie Quan", "A$AP Rocky", "Royce Da 5'9\"", "Yelawolf", "Big KRIT", "Danny Brown", "Action Bronson", "Joey BADA$$", "Ab-Soul", "Ace Hood", "Jay Rock", "Tech N9ne", "B.o.B", "Mac Miller", "Snoop Dogg", "Childish Gambino", "Curren$y", "Murs", "The Roots", "Gucci Mane", "Logic", "Fat Joe", "LL Cool J", "Nelly", "Bone Thugs-n-Harmony", "Waka Flocka Flame", "Trey Songz", "Mystikal", "Bun B", "Soulja Boy", "Krizz Kaliko", "Lil B", "Wyclef Jean", "Chance The Rapper", "Kevin Gates", "Hodgy Beats", "Prodigy (Mobb Deep)", "Asher Roth", "Ice Cube", "Nate Dogg", "El-P", "AZ", "Mobb Deep", "Havoc", "De La Soul", "Beastie Boys", "Xzibit", "Kool G. Rap", "Inspectah Deck", "MC Guru", "Freddie Gibbs", "Killah Priest", "Method Man", "MF DOOM", "Cappadonna", "Madlib", "RiFF RAFF", "Masta Ace", "Krayzie Bone", "Brother Ali", "Redman", "Outlawz", "Ice-T", "Three 6 Mafia", "Ras Kass", "Aesop Rock", "Cunninlynguists", "Prince Paul", "Erick Sermon", "E.P.M.D.", "Atmosphere", "Rakim", "A Tribe Called Quest", "Run-D.M.C.", "Eyedea", "Cannibal Ox", "UGK", "Pimp C", "GZA", "Kool Keith", "Das EFX", "Gang Starr", "Goodie Mob", "Cypress Hill", "Clipse", "Biz Markie", "Jungle Brothers", "Jay Electronica", "Jeru the Damaja", "Canibus", "Earl Sweatshirt", "U-God", "Masta Killa", "Eazy-E", "Big L", "Lauryn Hill", "Big Punisher", "Slick Rick", "Public Enemy", "Chuck D", "Big Boi", "Andre 3000", "Black Thought", "The Underachievers", "Flatbush Zombies", "Capital STEEZ", "CJ Fly", "Casey Veggies", "Big Daddy Kane", "Immortal Technique", "Pharoahe Monch", "MC Lyte", "Kool Moe Dee", "Queen Latifah", "Beanie Sigel", "Domo Genesis", "Game", "Rae Sremmurd"];
 
 $(document).ready(function ()
         {  
@@ -174,9 +179,9 @@ function mousedown() {
 var force = d3.layout.force().size([width, height]);
 
 var svg = d3.select("#svg-wrapper").append("svg")
-    .attr("width", width)
-    .attr("height", height)
-    .attr("class", "open-hand-cursor");
+.attr("width", width)
+.attr("height", height)
+.attr("class", "open-hand-cursor");
 
 svg.on("mousedown.drag", function() {
     svg.attr("class", "closed-hand-cursor");
@@ -187,7 +192,7 @@ svg.on("mousedown.drag", function() {
 var vis = svg.append('svg:g')
 
 svg.call(d3.behavior.zoom().on("zoom", rescale))
-    .on("dblclick.zoom", null)
+.on("dblclick.zoom", null)
 
 d3.json("yeezified_network.json", function(error, graph) {
 
@@ -218,12 +223,13 @@ function makeGraph(graph, value, artist_name) {
     vis.selectAll('*').remove();
     var nodes = graph.nodes.slice(),
     links = [],
-    bilinks = [],
-    intermediateNodes = [],
-    coloredEdges = [];
+        bilinks = [],
+        intermediateNodes = [],
+            coloredEdges = [],
+            dashedEdges = [];
     // Label artist/threshold
     d3.select("#artist-label").html(artist_name);
-    d3.select("#threshold-label").html(Math.ceil(Math.pow(value/10, 2)));
+    d3.select("#threshold-label").html(Math.ceil(Math.pow(value/10, 2)) + 1);
     var slider_threshold = Math.pow(value/10, 2);
     // Create intermediate nodes for bezier curves
     graph.links.forEach(function(link) {
@@ -256,10 +262,9 @@ function makeGraph(graph, value, artist_name) {
         .attr("id", function(d) {
             return 'a' + CryptoJS.SHA1(d[0].name) + CryptoJS.SHA1(d[2].name)
         })
-        .attr("stroke-width", function(d) {
-            return Math.sqrt(d[3])/5
-        })
-
+    .attr("stroke-width", function(d) {
+        return Math.sqrt(d[3])/5
+    })
     var node = vis.selectAll(".node")
         .data(graph.nodes)
         .enter().append("circle")
@@ -267,7 +272,7 @@ function makeGraph(graph, value, artist_name) {
         .attr("id", function(d) {
             return "a" + CryptoJS.SHA1(d.name)
         })
-        .attr("r", 4)
+    .attr("r", 4)
         .style("fill", function(d) { 
             if (d.name == artist_name) {
                 return d3.rgb(255, 0, 0);
@@ -277,13 +282,17 @@ function makeGraph(graph, value, artist_name) {
         })
     .call(force.drag);
 
-    node.append("title")
+    dashedLink = vis.selectAll(".dashed-link")
+        .data(dashedEdges)
+        .enter().append("path")
+
+        node.append("title")
         .text(function(d) { return d.name; });
 
     node.on("mouseover", function(d) {
         svg.attr("class", "pointer-cursor")
 
-        d3.select(this).attr("r", 6)
+            d3.select(this).attr("r", 6)
             artistName.html(d.name)
             artistPicture.attr("src", d.image)
 
@@ -300,22 +309,40 @@ function makeGraph(graph, value, artist_name) {
                     $.each(d.yeezy_path[artist_name], function(key, value) {
                         // Color edges on the way to the centre
                         var edge = d3.select("#a" + CryptoJS.SHA1(value.to) + CryptoJS.SHA1(value.from))
-                        if (edge[0][0]) {
-                            edge.attr("class", "path-to-centre")
-                            .attr("stroke-width", function(d) {
-                                return Math.sqrt(d[3])
-                            })
-                            coloredEdges.push(edge)
-                        } else {
-                            var edge = d3.select("#a" + CryptoJS.SHA1(value.from) + CryptoJS.SHA1(value.to))
                             if (edge[0][0]) {
                                 edge.attr("class", "path-to-centre")
-                                .attr("stroke-width", function(d) {
-                                    return Math.sqrt(d[3])
-                                })
+                                    .attr("stroke-width", function(d) {
+                                        return Math.sqrt(d[3])
+                                    })
                                 coloredEdges.push(edge)
-                            } 
-                        }
+                            } else {
+                                var edge = d3.select("#a" + CryptoJS.SHA1(value.from) + CryptoJS.SHA1(value.to))
+                                    if (edge[0][0]) {
+                                        edge.attr("class", "path-to-centre")
+                                            .attr("stroke-width", function(d) {
+                                                return Math.sqrt(d[3])
+                                            })
+                                        coloredEdges.push(edge)
+                                    } else {
+                                        // Edge not found (threshold too high)
+                                        dashedEdges.push({"source" : d3.select("#a" + CryptoJS.SHA1(value.from)), "target" : d3.select("#a" + CryptoJS.SHA1(value.to))})
+
+                                            dashedLink = vis.selectAll(".dashed-link")
+                                            .data(dashedEdges)
+                                            .enter().insert("path", ":first-child")
+                                            .attr("class", "dashed-link")
+                                            .attr("stroke-dasharray", "3,6")
+                                            .attr("stroke-width", "2")
+                                            .attr("d", function(d) {
+                                                var sourceX = d.source.attr("transform").split('(')[1].split(',')[0]
+                                                    var sourceY = d.source.attr("transform").split('(')[1].split(',')[1].replace(')', '')
+                                                    var targetX = d.target.attr("transform").split('(')[1].split(',')[0]
+                                                    var targetY = d.target.attr("transform").split('(')[1].split(',')[1].replace(')', '')
+                                                    return "M" + sourceX + "," + sourceY
+                                                    + "L" + targetX + "," + targetY;
+                                            });
+                                    }
+                            }
 
                         // Color nodes on the way to the centre
                         var intermediateNode = d3.select("#a" + CryptoJS.SHA1(value.to))
@@ -328,8 +355,8 @@ function makeGraph(graph, value, artist_name) {
                             })
                         intermediateNodes.push(intermediateNode)
 
-                        // Write out the path
-                        var sentence = "<p>"
+                            // Write out the path
+                            var sentence = "<p>"
                             sentence += value.from
                             sentence += " and "
                             sentence += value.to
@@ -341,34 +368,37 @@ function makeGraph(graph, value, artist_name) {
             }
     }).on("mouseout", function(d) {
         svg.attr("class", "open-hand-cursor")
-        d3.select(this).attr("r", 4)
+            d3.select(this).attr("r", 4)
             artistName.html("Hover over an artist!")
             artistPicture.attr("src", "http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg")
             yeezyNumber.html("")
             yeezyPath.html("")
 
-        // Uncolor edges
-        $.each(coloredEdges, function(key, value) {
-            // Color edges on the way to the centre
-            value.attr("class", "link")
-            .attr("stroke-width", function(d) {
-                return Math.sqrt(d[3])/5
+            // Uncolor edges
+            $.each(coloredEdges, function(key, value) {
+                // Color edges on the way to the centre
+                value.attr("class", "link")
+                    .attr("stroke-width", function(d) {
+                        return Math.sqrt(d[3])/5
+                    })
             })
-        })
         coloredEdges = []
 
-        // Uncolor nodes 
-        $.each(intermediateNodes, function(key, value) {
-            // Color edges on the way to the centre
-            value.style("fill", function(d) { 
-                if (d.name == artist_name) {
-                    return d3.rgb(255, 0, 0);
-                } else {
-                    return d3.rgb(30, 119, 180); 
-                }
+            // Uncolor nodes 
+            $.each(intermediateNodes, function(key, value) {
+                // Color edges on the way to the centre
+                value.style("fill", function(d) { 
+                    if (d.name == artist_name) {
+                        return d3.rgb(255, 0, 0);
+                    } else {
+                        return d3.rgb(30, 119, 180); 
+                    }
+                })
             })
-        })
         intermediateNodes = []
+
+            d3.selectAll('.dashed-link').remove()
+            dashedEdges = []
 
     });
 
@@ -380,6 +410,14 @@ function makeGraph(graph, value, artist_name) {
         });
         node.attr("transform", function(d) {
             return "translate(" + d.x + "," + d.y + ")";
+        });
+        dashedLink.attr("d", function(d) {
+            var sourceX = d.source.attr("transform").split('(')[1].split(',')[0]
+                var sourceY = d.source.attr("transform").split('(')[1].split(',')[1].replace(')', '')
+                var targetX = d.target.attr("transform").split('(')[1].split(',')[0]
+                var targetY = d.target.attr("transform").split('(')[1].split(',')[1].replace(')', '')
+                return "M" + sourceX + "," + sourceY
+                + "L" + targetX + "," + targetY;
         });
     });
 }
