--- a/visualizations/rap_network/attempt_5/index.html
+++ b/visualizations/rap_network/attempt_5/index.html
@@ -35,6 +35,12 @@ html, body {
     width : 50%;
 }
 
+@media screen and (max-width : 800px) {
+    .container {
+        width : 90%;
+    }
+}
+
 .section-divider {
     margin : 2em auto;
     border-top : solid 2px grey;
@@ -65,8 +71,15 @@ box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
     margin-bottom : 1em;
 }
 
+#artist-number-label {
+    font-style : italic;
+}
+
+#path-to-yeezy {
+    margin-top : 3em;
+}
+
 #sidebar {
-    width : 25%;
     height : 610px;
     float : left;
     box-sizing : border-box;
@@ -150,13 +163,13 @@ box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
     </div>
     <div id="graph-content" class="row">
         <div id="sidebar" class="three columns">
-            <h4 id="artist-name"> Hover over an artist! </h4>
+            <h4 id="artist-name"></h4>
             <img src="http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg" alt="" id="artist-picture"/>
+            <p id="bitch"></p>
             <p id="artist-number-label" style="display:none"><span id="artist-label">Yeezy</span> Number: <span id="yeezy-number"></span></p>
-            <div id="path-to-yeezy">
-            </div>
+            <div id="path-to-yeezy"></div>
         </div>
-        <div id="svg-wrapper"></div>
+        <div id="svg-wrapper" class="eight columns"></div>
     </div>
     <div id="writing-content" class="container">
         <div class="section-divider"></div>
@@ -275,6 +288,11 @@ svg.on("mousedown.drag", function() {
 
 var vis = svg.append('svg:g')
 
+// Set initial zoom/position
+vis.attr("transform",
+        "translate(100,150)"
+        + " scale(.8)");
+
 svg.call(d3.behavior.zoom().on("zoom", rescale))
 .on("dblclick.zoom", null)
 
@@ -388,7 +406,8 @@ function makeGraph(graph, value, artist_name) {
                     sentence += d.name
                     sentence += " number, bitch."
                     sentence += "</p>"
-                    yeezyPath.append($(sentence));
+                    d3.select("#bitch").html(sentence).style("display", "block");
+
             } else {
                 d3.select("#artist-number-label").style("display", "inline")
                 yeezyNumber.html(d.yeezy_number[artist_name])
@@ -453,10 +472,11 @@ function makeGraph(graph, value, artist_name) {
                     })
             }
     }).on("mouseout", function(d) {
-        d3.select("#artist-number-label").style("display", "inline")
+        d3.select("#bitch").html("").style("display", "none");
+        d3.select("#artist-number-label").style("display", "none")
         svg.attr("class", "open-hand-cursor")
             d3.select(this).attr("r", 4)
-            artistName.html("Hover over an artist!")
+            artistName.html("")
             artistPicture.attr("src", "http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg")
             yeezyNumber.html("")
             yeezyPath.html("")
